--- a/typst.toml
+++ b/typst.toml
@@ -2,7 +2,7 @@
 name = "use-tabler-icons"
 version = "0.1.0"
 entrypoint = "src/lib.typ"
-authors = ["MaxMixAlex <MaxMixAlex@protonmail.com>"]
+authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>", "MaxMixAlex <MaxMixAlex@protonmail.com>"]
 license = "MIT"
 description = "Tabler Icons for Typst using webfont."
 repository = "https://github.com/zyf722/typst-tabler-icons"
