chore: publish with asset for README

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dist-manifest": [
       "src/**",
       "LICENSE",
-      "typst.toml"
+      "typst.toml",
+      "assets/splash.svg"
     ]
   }
 }
